# learn-opengl

./: .gitignore  CMakeLists.txt
include/: shader.h
include/glad/: glad.h
shaders/: basic.frag  basic.vert
src/: glad.c  main.cxx  shader.cxx
